--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -7,20 +7,21 @@
 .cabeçalho {
     width: 100%;
 height: 100px;
-background-color: rgb(3, 3, 131);
+background-color: rgb(1, 1, 189);
 border: 5px solid rgb(0, 0, 0);
 font-family: cursive;
 }
 
 .h1cabeça{
     margin-left: 10px ;
+    font-size: 50px;
 }
 
 .esquerdo{
 height: 1000px;
 width: 150px;
 border:5px solid rgb(0, 0, 0);
-background-color: rgb(3, 3, 131);
+background-color: rgb(1, 1, 189);
 float: right;
 
 }
@@ -30,5 +31,19 @@ float: right;
     border: 5px solid rgb(0, 0, 0);
     height: 100px;
     width: 100%;
-    background-color: rgb(3, 3, 131);
+    background-color: rgb(1, 1, 189)
 }
+
+.rodape {
+    height: 150px;
+    background-color: rgb(1, 1, 189);
+    clear: both;
+    bottom: 0%;
+    border-top: 5px solid #000000;
+    width: 100%;
+    border-right: 5px solid #000000;
+    border-bottom: 5px solid #000000;
+    border-right: 5px solid #000000;
+}
+
+
