--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -64,6 +64,17 @@ img {
   color:#FFFFFF
 }
 
+.esquerdoBibli {
+  height: 3500px;
+  width: 200px;
+  border: 5px solid rgb(0, 0, 0);
+  background-color: rgb(50, 50, 121);
+  float: right;
+  text-align: center;
+  color:#FFFFFF
+}
+
+
 .esquerdoNewton {
   height: 3300px;
   width: 200px;
