--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -44,94 +44,15 @@ img {
   font-size: 50px;
 }
 
-.esquerdo {
-  height: 1000px;
-  width: 200px;
-  border: 5px solid rgb(0, 0, 0);
-  background-color: rgb(50, 50, 121);
-  float: right;
-  text-align: center;
-  color:#FFFFFF
-}
 
-.esquerdoOndas {
-  height: 1500px;
-  width: 200px;
-  border: 5px solid rgb(0, 0, 0);
-  background-color: rgb(50, 50, 121);
-  float: right;
-  text-align: center;
-  color:#FFFFFF
-}
-
-.esquerdoEnergia {
-  height: 5000px;
-  width: 200px;
-  border: 5px solid rgb(0, 0, 0);
-  background-color: rgb(50, 50, 121);
-  float: right;
-  text-align: center;
-  color:#FFFFFF
-}
-
-.esquerdoOptica {
-  height: 4000px;
-  width: 200px;
-  border: 5px solid rgb(0, 0, 0);
-  background-color: rgb(50, 50, 121);
-  float: right;
-  text-align: center;
-  color:#FFFFFF
-}
-
-.esquerdoBibli {
-  height: 3500px;
-  width: 200px;
-  border: 5px solid rgb(0, 0, 0);
-  background-color: rgb(50, 50, 121);
-  float: right;
-  text-align: center;
-  color:#FFFFFF
-}
-
-.esquerdoCorre {
-  height: 1500px;
-  width: 200px;
-  border: 5px solid rgb(0, 0, 0);
-  background-color: rgb(50, 50, 121);
-  float: right;
-  text-align: center;
-  color:#FFFFFF
-}
-
-
-.esquerdoNewton {
-  height: 3300px;
-  width: 200px;
-  border: 5px solid rgb(0, 0, 0);
-  background-color: rgb(50, 50, 121);
-  float: right;
-  text-align: center;
-  color:#FFFFFF
-}
-
-.esquerdoMecanica {
-  height: 2500px;
-  width: 200px;
-  border: 5px solid rgb(0, 0, 0);
-  background-color: rgb(50, 50, 121);
-  float: right;
-  text-align: center;
-  color:#FFFFFF
-}
 
 .conteudo{
-float: left;
+
 margin-top: 15px;
 margin-left: 15px;
-max-width: 800px;
-height: 800px;
-
+max-width: 950px;
+min-width: 320px;
+margin: auto;
 
 }
 
@@ -503,4 +424,13 @@ img.whale {
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
+}
+
+
+@media (max-width: 1024px) {
+  #openNav{display: none;}
+  .menu{display: block;}
+}
+@media screen and (max-width:790px){
+  .MenuB {display:none;}
 }
