--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -361,6 +361,12 @@ img.whale {
   }
 }
 
+.openNav{
+  float: right;
+  padding-bottom: 10px;
+  margin-top: -30px;
+}
+
 
 .sidebar {
   height: 100%;
@@ -385,6 +391,10 @@ img.whale {
   transition: 0.3s;
 }
 
+h1.center{
+  text-align: center;
+}
+
 .sidebar a:hover {
   color: #f1f1f1;
 }
@@ -402,10 +412,8 @@ img.whale {
   cursor: pointer;
   background-color: #111;
   color: white;
-  padding: 10px 15px;
   border: none;
   float: right;
-  margin-top: -50px;
 }
 
 .openbtn:hover {
@@ -413,8 +421,14 @@ img.whale {
 }
 
 #main {
-  transition: margin-left .5s;
-  padding: 16px;
+  padding-bottom: 10px;
+
+}
+
+.MenuB {
+  float: right;
+  padding-bottom: 10px;
+margin-bottom: 20px
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
