--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -5,7 +5,9 @@
 }
 
 body {
-font-family: 'Avalors Personal Use';
+  font-family: 'Avalors Personal Use';
+  background-color: #ebebeb;
+
 }
 
 img {
@@ -18,12 +20,12 @@ img {
   height: 100px;
   background-color: rgb(50, 50, 121);
   border: 5px solid rgb(0, 0, 0);
-    z-index: 2;
+  z-index: 2;
   font-family: 'Avalors Personal Use';
   font-size: 15px;
   letter-spacing: 5px;
   color: #FFFFFF;
-  
+
 }
 
 #caixa {
@@ -36,7 +38,7 @@ img {
   border: 5px solid rgb(0, 0, 0);
   margin-left: 100px;
   border-radius: 10;
-  color:#FFFFFF
+  color: #FFFFFF
 }
 
 .h1cabeça {
@@ -44,14 +46,23 @@ img {
   font-size: 50px;
 }
 
-.conteudo{
-margin-top: 15px;
-margin-left: 15px;
-max-width: 950px;
-min-width: 320px;
-margin: auto;
+.conteudo {
+  margin-top: 15px;
+  margin-left: 15px;
+  max-width: 950px;
+  min-width: 320px;
+  margin: auto;
+  background-color: white;
+  border-radius: 10px;
+  border-left: 2px solid #000000;
+  border-right: 2px solid #000000;
+  box-shadow: 2px 6px #333;
 }
 
+p.margem{
+  margin-left: 5px;
+  text-indent:2em
+}
 
 .rodape {
   height: 150px;
@@ -110,8 +121,7 @@ strong.textosTitulo {
   font-size: 30px;
   letter-spacing: 5px;
   color: rgb(50, 50, 121);
-  text-shadow: 0 0 4px rgb(50, 50, 121)
-;
+  text-shadow: 0 0 4px rgb(50, 50, 121);
 }
 
 strong.cabeça {
@@ -287,11 +297,11 @@ img.max {
 
 @keyframes max-animation {
   from {
-      right: -80px
+    right: -80px
   }
 
   to {
-      right: 100%
+    right: 100%
   }
 }
 
@@ -316,24 +326,24 @@ img.yellow {
 
 @keyframes jump {
   0% {
-      bottom: 0;
+    bottom: 0;
   }
 
   40% {
-      bottom: 180px
+    bottom: 180px
   }
 
   50% {
-      bottom: 180px;
+    bottom: 180px;
   }
 
   60% {
-      bottom: 180px
+    bottom: 180px
   }
 
 
   100% {
-      bottom: 0
+    bottom: 0
   }
 
 }
@@ -353,15 +363,15 @@ img.whale {
 
 @keyframes whale-animation {
   from {
-      right: -100px
+    right: -100px
   }
 
   to {
-      right: 100%
+    right: 100%
   }
 }
 
-.openNav{
+.openNav {
   float: right;
   padding-bottom: 10px;
   margin-top: -30px;
@@ -391,7 +401,7 @@ img.whale {
   transition: 0.3s;
 }
 
-h1.center{
+h1.center {
   text-align: center;
 }
 
@@ -428,20 +438,33 @@ h1.center{
 .MenuB {
   float: right;
   padding-bottom: 10px;
-margin-bottom: 20px
+  margin-bottom: 20px
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
-  .sidebar {padding-top: 15px;}
-  .sidebar a {font-size: 18px;}
+  .sidebar {
+    padding-top: 15px;
+  }
+
+  .sidebar a {
+    font-size: 18px;
+  }
 }
 
 
 @media (max-width: 1024px) {
-  #openNav{display: none;}
-  .menu{display: block;}
+  #openNav {
+    display: none;
+  }
+
+  .menu {
+    display: block;
+  }
 }
-@media screen and (max-width:790px){
-  .MenuB {display:none;}
+
+@media screen and (max-width:790px) {
+  .MenuB {
+    display: none;
+  }
 }
