--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -49,8 +49,10 @@ img {
 }
 
 .conteudo {
-  margin-top: 15px;
-  margin-left: 15px;
+  margin-left: 3cm;
+  margin-bottom: 2cm ;
+  margin-top: 3cm;
+  margin-right: 2cm;
   max-width: 950px;
   min-width: 320px;
   margin: auto;
@@ -61,6 +63,8 @@ img {
   box-shadow: 2px 6px #333;
   text-align: justify;
 }
+
+
 
 p.margem {
   margin-left: 5px;
