--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -70,7 +70,10 @@ img {
   border-radius: 10px;
   border-left: 2px solid #000000;
   border-right: 2px solid #000000;
-  box-shadow: 2px 6px #333;
+  border-top: 2px solid #000000;
+  border-bottom: 2px solid #000000;
+
+  box-shadow: 3px 3px 3px 3px #333;
   text-align: justify;
 }
 
