--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -457,6 +457,6 @@ h1.center {
 .SambaquiLetra{
     font-size: 15px;
     letter-spacing: 5px;
-    color: #FFFFFF;
+    color: black;
     text-shadow: 0 0 4px white;
 }
