Atualizações na barra lateral

--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -10,7 +10,7 @@ body {
   ;
   background-size: cover;
   width: 100%;
-  
+
   background-image: url("Imagens/555187.jpg");
 }
 
@@ -18,21 +18,35 @@ body {
   line-break: initial;
   background-size: cover;
   width: 100%;
-  
   background-position: center;
   background-repeat: no-repeat;
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-top: 10cm;
+  margin-top: 8cm;
   /*display: unset;*/
   font-size: 20px;
   color: #FFFFFF;
   text-shadow: 0 0 4px white;
-  
-  
 }
 
+.teste {
+  width: 300px;
+  height: 300px;
+  background-color: green;
+  border: 3px solid black;
+  border-radius: 10px;
+  margin-left: 20px;
+}
+
+.teste:hover {
+  width: 300px;
+  height: 300px;
+  background-color: rgb(0, 0, 0);
+  border: 3px solid rgb(255, 0, 0);
+  border-radius: 10px;
+
+}
 
 img {
   border-radius: 10px;
@@ -133,6 +147,24 @@ p.margemC {
 
 .btn {
   margin-left: 4.8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 180px;
+  height: 3rem;
+  background-size: 300% 300%;
+  backdrop-filter: blur(1rem);
+  border-radius: 5rem;
+  transition: 0.5s;
+  animation: gradient_301 5s ease infinite;
+  border: double 4px transparent;
+  background-image: linear-gradient(#212121, #212121), linear-gradient(137.48deg, #0062FF 10%, rgb(0, 0, 0) 45%, rgb(1, 1, 189) 67%, rgb(0, 0, 0) 87%);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+}
+
+.btn1 {
+  margin-left: 4.8px;
   /*display: flex;*/
   justify-content: center;
   align-items: center;
@@ -174,7 +206,7 @@ strong.textosTitulo {
   font-family: 'Avalors Personal Use';
   font-size: 30px;
   letter-spacing: 5px;
-  color: #0062FF ;
+  color: #0062FF;
   text-shadow: 0 0 4px rgb(50, 50, 121);
 }
 
@@ -234,6 +266,26 @@ a {
 }
 
 .btn:active .circle {
+  background: #0062FF;
+}
+
+.btn1:hover #container-stars {
+  z-index: 1;
+  background-color: #212121;
+}
+
+.btn1:hover {
+  transform: scale(1.1)
+}
+
+.btn1:active {
+  border: double 4px #0062FF;
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  animation: none;
+}
+
+.btn1:active .circle {
   background: #0062FF;
 }
 
@@ -332,6 +384,13 @@ a {
   margin-top: -30px;
 }
 
+.body::-webkit-scrollbar{
+  display: none;
+}
+
+.sidebar::-webkit-scrollbar{
+  display: none;
+}
 
 .sidebar {
   height: 100%;
@@ -342,11 +401,34 @@ a {
   left: 0;
   background-color: #0062FF;
   overflow-x: hidden;
-  transition: 0.5s;
+  
+  transition: 0s;
   padding-top: 60px;
   border: 5px solid #000000;
   scrollbar-width: 0%;
 }
+
+@keyframes barra {
+  from {
+    top: -100%
+  }
+
+  to {
+    bottom: 100%
+  }
+}
+
+/*Caso a gente queira fazer a barra voltar de novo
+  @keyframes barraDois {
+  from {
+    bottom: 100%
+  }
+
+  to {
+    top: -100%
+  }
+}*/
+
 
 .sidebar a {
   padding: 8px 8px 8px 32px;
@@ -354,7 +436,7 @@ a {
   font-size: 25px;
   color: #818181;
   display: block;
-  transition: 0.3s;
+  transition: 0.5s;
 }
 
 h1.center {
@@ -454,12 +536,14 @@ h1.center {
   text-align: center;
   border-radius: 10px;
 }
-.SambaquiLetra{
-    font-size: 15px;
-    letter-spacing: 5px;
-    color: black;
-    text-shadow: 0 0 4px white;
+
+.SambaquiLetra {
+  font-size: 15px;
+  letter-spacing: 5px;
+  color: black;
+  text-shadow: 0 0 4px white;
 }
-.alight{
+
+.alight {
   text-align: center;
 }
