--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -427,6 +427,24 @@ a {
   }
 }
 
+@keyframes gradient_3012 {
+  0% {
+    background-position: 0% 50%;
+  }
+  25%{
+    background-position: 100% 25%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  75%{
+    background-position: 100% 75%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 @keyframes pulse_3011 {
   0% {
     transform: scale(0.75);
@@ -449,7 +467,7 @@ a {
   height: 300px;
   background-color: #0062FF;
   box-shadow: 2px 2px 0px 0px white;
-  margin-left: 2cm;
+  margin-left: auto;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -460,7 +478,7 @@ a {
   height: 300px;
   background-color: #000000;
   box-shadow: 2px 2px 0px 0px white;
-  margin-left: 1cm;
+  margin-left: auto;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -471,7 +489,7 @@ a {
   height: 300px;
   background-color: #000000;
   box-shadow: 2px 2px 0px 0px white;
-  margin-left: 1cm;
+  margin-left: auto;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -482,7 +500,7 @@ a {
   height: 300px;
   background-color: #0062FF;
   box-shadow: 2px 2px 0px 0px white;
-  margin-left: 1cm;
+  margin-left: auto;
   margin-right: 2cm;
   border-radius: 10px;
   text-align: center;
@@ -496,9 +514,9 @@ a {
   box-shadow: 2px 2px 0px 0px white;
   margin-left: 2cm;
   margin-top: -10px;
-  margin-right: 5px;
-  transition: 0.5s;
-  animation: gradient_301 5s ease infinite;
+  margin-right: auto;
+  transition: 2s;
+  animation: gradient_3012 5s ease infinite;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -512,8 +530,8 @@ a {
   margin-left: 1cm;
   margin-top: -10px;
   margin-right: 5px;
-  transition: 0.5s;
-  animation: gradient_301 5s ease infinite;
+  transition: 2s;
+  animation: gradient_3012 5s ease infinite;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -527,8 +545,8 @@ a {
   margin-left: 1cm;
   margin-top: -10px;
   margin-right: 5px;
-  transition: 0.5s;
-  animation: gradient_301 5s ease infinite;
+  transition: 2s;
+  animation: gradient_3012 5s ease infinite;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -542,9 +560,9 @@ a {
   margin-left: 1cm;
   margin-right: 2cm;
   margin-top: -10px;
-  margin-right: 5px;
-  transition: 0.5s;
-  animation: gradient_301 5s ease infinite;
+  margin-right: auto;
+  transition: 2s;
+  animation: gradient_3012 5s ease infinite;
   border-radius: 10px;
   text-align: center;
   align-items: center;
