--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -10,6 +10,11 @@ body {
   background-size: cover;
   width: 100%;
   background-image: url("Imagens/555187.jpg");
+
+}
+
+html {
+  cursor: url('Imagens/R.png'), auto;
 }
 
 .parteIndex {
@@ -68,7 +73,7 @@ img {
   background-color: #0062FF;
   border: 5px solid rgb(0, 0, 0);
   z-index: 2;
-  font-family:  Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   letter-spacing: 5px;
   color: #FFFFFF;
@@ -190,7 +195,7 @@ p.margemC {
 
 strong {
   z-index: 2;
-  font-family:  Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   letter-spacing: 5px;
   color: #FFFFFF;
@@ -199,7 +204,7 @@ strong {
 
 strong.textosTitulo {
   z-index: 2;
-  font-family:  Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   letter-spacing: 5px;
   color: #0062FF;
@@ -208,7 +213,7 @@ strong.textosTitulo {
 
 strong.cabeca {
   z-index: 2;
-  font-family:  Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 50px;
   letter-spacing: 5px;
   color: #FFFFFF;
@@ -219,28 +224,30 @@ strong.cabeca {
   width: 100%;
 }
 
-html::-webkit-scrollbar{
+strong.cabeca2 {
+  z-index: 2;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 80px;
+  letter-spacing: 5px;
+  color: #FFFFFF;
+  text-shadow: 0 0 4px white;
+  text-decoration: none;
+  margin-left: 10px;
+  font-size: 50px;
+  width: 100%;
+}
+
+html::-webkit-scrollbar {
   display: none;
 }
 
 
 
-.imagemDi{
+.imagemDi {
   display: flex;
 }
 
-.texto1{
-  display: flex;
-  margin-left: 2cm;
-  width: 85%;
-  height: 350px;
-  background-color: #0d63ed;
-  border-radius: 10px;
-  box-shadow: 2px 2px 0px 0px white;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.texto2{
+.texto1 {
   display: flex;
   margin-left: 2cm;
   width: 85%;
@@ -251,41 +258,44 @@ html::-webkit-scrollbar{
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.texto2 {
+  display: flex;
+  margin-left: 2cm;
+  width: 85%;
+  height: 350px;
+  background-color: #0d63ed;
+  border-radius: 10px;
+  box-shadow: 2px 2px 0px 0px white;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 
-p.caixas{
+
+p.caixas {
   z-index: 2;
-  font-family:  Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   letter-spacing: 5px;
   color: #FFFFFF;
   text-shadow: 0 0 4px white;
-  text-decoration: none;  
+  text-decoration: none;
   width: 100%;
 }
 
 strong.cabeca1 {
   z-index: 2;
-  font-family:  Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   letter-spacing: 5px;
   color: #FFFFFF;
   text-shadow: 0 0 4px white;
-  text-decoration: none;  
+  text-decoration: none;
   width: 100%;
 }
 
-@media screen and (max-width:1080px) {
-  strong.cabeca {
-    z-index: 2;
-    font-family:  Arial, Helvetica, sans-serif;
-    font-size: 40px;
-    letter-spacing: 5px;
-    color: #FFFFFF;
-    text-shadow: 0 0 4px white;
-    text-decoration: none;
-    margin-left: 10px;
-    width: 100%;
+@media screen and (max-width:1024px) {
+  strong.cabeca2 {
+    font-size: 30px;
   }
 }
 
@@ -431,15 +441,11 @@ a {
   0% {
     background-position: 0% 50%;
   }
-  25%{
-    background-position: 100% 25%;
-  }
+
   50% {
     background-position: 100% 50%;
   }
-  75%{
-    background-position: 100% 75%;
-  }
+
   100% {
     background-position: 0% 50%;
   }
@@ -462,12 +468,22 @@ a {
   }
 }
 
+.caixas {
+  display: flex;
+}
+
+@media screen and (max-width: 1024px) {
+  .caixas {
+    display: grid;
+  }
+}
+
 #caixa1 {
   width: 300px;
   height: 300px;
   background-color: #0062FF;
   box-shadow: 2px 2px 0px 0px white;
-  margin-left: auto;
+  margin: auto;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -476,9 +492,9 @@ a {
 #caixa2 {
   width: 300px;
   height: 300px;
+  margin: auto;
   background-color: #000000;
   box-shadow: 2px 2px 0px 0px white;
-  margin-left: auto;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -487,9 +503,10 @@ a {
 #caixa3 {
   width: 300px;
   height: 300px;
+  margin: auto;
+  ;
   background-color: #000000;
   box-shadow: 2px 2px 0px 0px white;
-  margin-left: auto;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -498,10 +515,9 @@ a {
 #caixa4 {
   width: 300px;
   height: 300px;
+  margin: auto;
   background-color: #0062FF;
   box-shadow: 2px 2px 0px 0px white;
-  margin-left: auto;
-  margin-right: 2cm;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -512,11 +528,9 @@ a {
   height: 300px;
   background-color: #0d63ed;
   box-shadow: 2px 2px 0px 0px white;
-  margin-left: 2cm;
   margin-top: -10px;
-  margin-right: auto;
-  transition: 2s;
-  animation: gradient_3012 5s ease infinite;
+  transition: 1s;
+  animation: gradient_3012 2s ease infinite;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -527,11 +541,9 @@ a {
   height: 300px;
   background-color: #1f1f1f;
   box-shadow: 2px 2px 0px 0px white;
-  margin-left: 1cm;
   margin-top: -10px;
-  margin-right: 5px;
-  transition: 2s;
-  animation: gradient_3012 5s ease infinite;
+  transition: 1s;
+  animation: gradient_3012 2s ease infinite;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -542,11 +554,9 @@ a {
   height: 300px;
   background-color: #1f1f1f;
   box-shadow: 2px 2px 0px 0px white;
-  margin-left: 1cm;
+  transition: 1s;
   margin-top: -10px;
-  margin-right: 5px;
-  transition: 2s;
-  animation: gradient_3012 5s ease infinite;
+  animation: gradient_3012 2s ease infinite;
   border-radius: 10px;
   text-align: center;
   align-items: center;
@@ -557,12 +567,9 @@ a {
   height: 300px;
   background-color: #0d63ed;
   box-shadow: 2px 2px 0px 0px white;
-  margin-left: 1cm;
-  margin-right: 2cm;
+  transition: 1s;
   margin-top: -10px;
-  margin-right: auto;
-  transition: 2s;
-  animation: gradient_3012 5s ease infinite;
+  animation: gradient_3012 2s ease infinite;
   border-radius: 10px;
   text-align: center;
   align-items: center;
