--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -21,13 +21,13 @@ html {
   line-break: initial;
   background-size: cover;
   width: 100%;
+  height: 18cm;
   background-position: center;
   background-repeat: no-repeat;
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-top: 6cm;
-  /*display: unset;*/
+  margin-top: 8cm;
   font-size: 20px;
   color: #FFFFFF;
   text-shadow: 0 0 4px white;
@@ -279,12 +279,52 @@ html::-webkit-scrollbar {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
+@media screen and (max-width: 1024px) {
+  
+}
 
 p.caixas {
   z-index: 2;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
+  font-size: 18px;
+  letter-spacing: 5px;
+  color: #FFFFFF;
+  text-shadow: 0 0 4px white;
+  text-decoration: none;
+  width: 100%;
+  text-align: center;
+  align-items: center;
+  display: grid;
+}
+
+img.veio{
+  display: flex;
+  width: 50%;
+  border: none;
+  margin-left: 1cm;
+}
+
+@media screen and (max-width: 1024px) {
+  p.caixas{
+
+  }
+  p.textos{
+
+  }
+  img.veio{
+    display: grid;
+    align-items: center;
+    text-align: center;
+    margin-left: 5cm;
+  }
+  .texto1{
+    display: grid;  }
+}
+
+p.textos {
+  z-index: 2;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
   letter-spacing: 5px;
   color: #FFFFFF;
   text-shadow: 0 0 4px white;
@@ -489,8 +529,8 @@ a {
 }
 
 #caixa1 {
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   background-color: #0062FF;
   box-shadow: 2px 2px 0px 0px white;
   margin: auto;
@@ -500,8 +540,8 @@ a {
 }
 
 #caixa2 {
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   margin: auto;
   background-color: #000000;
   box-shadow: 2px 2px 0px 0px white;
@@ -511,8 +551,8 @@ a {
 }
 
 #caixa3 {
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   margin: auto;
   ;
   background-color: #000000;
@@ -523,8 +563,8 @@ a {
 }
 
 #caixa4 {
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   margin: auto;
   background-color: #0062FF;
   box-shadow: 2px 2px 0px 0px white;
@@ -534,8 +574,8 @@ a {
 }
 
 #caixa1:hover {
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   background-color: #0d63ed;
   box-shadow: 2px 2px 0px 0px white;
   margin-top: -10px;
@@ -547,8 +587,8 @@ a {
 }
 
 #caixa2:hover {
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   background-color: #1f1f1f;
   box-shadow: 2px 2px 0px 0px white;
   margin-top: -10px;
@@ -560,8 +600,8 @@ a {
 }
 
 #caixa3:hover {
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   background-color: #1f1f1f;
   box-shadow: 2px 2px 0px 0px white;
   transition: 1s;
@@ -573,8 +613,8 @@ a {
 }
 
 #caixa4:hover {
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   background-color: #0d63ed;
   box-shadow: 2px 2px 0px 0px white;
   transition: 1s;
