--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -69,7 +69,7 @@ img {
 
 .cabeçalho {
   width: 100%;
-  height: 75px;
+  height: 80px;
   background-color: #0062FF;
   border: 5px solid rgb(0, 0, 0);
   z-index: 2;
@@ -243,15 +243,13 @@ html::-webkit-scrollbar {
 
 
 
-.imagemDi {
-  display: flex;
-}
+
 
 @media screen and (max-width: 1024px) {
   .texto1 {
     display: grid;
   }
-  
+
   .texto2 {
     display: grid;
   }
@@ -279,9 +277,11 @@ html::-webkit-scrollbar {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@media screen and (max-width: 1024px) {
-  
+.gato {
+  display: grid;
 }
+
+@media screen and (max-width: 1024px) {}
 
 p.caixas {
   z-index: 2;
@@ -297,7 +297,7 @@ p.caixas {
   display: grid;
 }
 
-img.veio{
+img.veio {
   display: flex;
   width: 50%;
   border: none;
@@ -305,20 +305,23 @@ img.veio{
 }
 
 @media screen and (max-width: 1024px) {
-  p.caixas{
+  p.caixas {}
 
+  p.textos {
+    margin-left: 1cm;
+    max-height: 500px;
   }
-  p.textos{
 
-  }
-  img.veio{
+  img.veio {
     display: grid;
     align-items: center;
     text-align: center;
     margin-left: 5cm;
   }
-  .texto1{
-    display: grid;  }
+
+  .texto1 {
+    display: grid;
+  }
 }
 
 p.textos {
@@ -330,6 +333,20 @@ p.textos {
   text-shadow: 0 0 4px white;
   text-decoration: none;
   width: 100%;
+
+}
+
+p.textos2 {
+  z-index: 2;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  letter-spacing: 5px;
+  color: #FFFFFF;
+  text-shadow: 0 0 4px white;
+  text-decoration: none;
+  width: 100%;
+  display: grid;
+  margin-left: 1cm;
 }
 
 strong.cabeca1 {
@@ -520,6 +537,11 @@ a {
 
 .caixas {
   display: flex;
+
+}
+
+.espaco {
+  height: 200px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -625,6 +647,28 @@ a {
   align-items: center;
 }
 
+img.FelixCatus {
+  border: none;
+  width: 100%;
+  float: right;
+  margin-right: 5%;
+  clear: both;
+}
+
+@media screen and (max-width: 1024px) {
+  img.FelixCatus {
+    display: grid;
+  }
+
+  .gato {
+    display: grid;
+  }
+
+  .texto2 {
+    display: grid;
+  }
+}
+
 .openNav {
   float: left;
   padding-bottom: 10px;
@@ -661,7 +705,7 @@ a {
 }
 
 /*Caso a gente queira fazer a barra voltar de novo*/
-  @keyframes barraDois {
+@keyframes barraDois {
   from {
     bottom: 100%
   }
