--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -224,6 +224,16 @@ strong.cabeca {
   width: 100%;
 }
 
+@media screen and (max-width: 1024px) {
+  strong.cabeca{
+    font-size: 32px;
+  }
+  .openNav{
+    margin-top: -40px;
+    padding-bottom: 15px;
+  }
+}
+
 strong.cabeca2 {
   z-index: 2;
   font-family: Arial, Helvetica, sans-serif;
@@ -544,9 +554,41 @@ a {
   height: 200px;
 }
 
+.espaco1 {
+  height: 200px;
+}
+
+@media screen and (max-width: 1024px) {
+  .texto1{
+    width: 90%;
+  }
+  .texto2{
+    width: 90%;
+  }
+  strong.cabeca2{
+    font-size: 15px;
+    margin-left: 2cm ;
+  }
+  strong.cabeca22{
+    margin-left: 5cm;
+    font-size: 15px;
+  }
+  p.textos2{
+    font-size: 15px;
+    max-width: 500px;
+  }
+  p.textos{
+    font-size: 15px;
+    max-width: 500px;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .caixas {
     display: grid;
+  }
+  .espaco{
+    height: 400px;
   }
 }
 
@@ -671,7 +713,6 @@ img.FelixCatus {
 
 .openNav {
   float: left;
-  padding-bottom: 10px;
   margin-top: -30px;
 }
 
