--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -13,6 +13,22 @@ body {
 
 }
 
+#magica{
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  animation: animation 4s;
+}
+
+@keyframes animation {
+  from{
+    right: -100%;
+  }
+}
+  to{
+    right: 100%;
+  }
+
 html {
   cursor: url('Imagens/R.png'), auto;
 }
