--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -14,17 +14,17 @@ body {
 }
 
 .efeito-magica {
-  width: 100vh;
-  height: 100vh;
+  width: 250vh;
+  height: 500vh;
   position: absolute;
   top: 0;
   background-color: #000000;
-  animation: animation 4s;
+  animation: animation 8s;
 }
 
 @keyframes animation {
   from {
-    right: -100%;
+    right: -150%;
   }
 
   to {
@@ -32,8 +32,87 @@ body {
   }
 }
 
+@keyframes crawl {
+  from{
+    top: 100%;
+  }
+  to{
+    top: 0%;
+  }
+}
+
+.poema{
+  width: 300px;
+  max-width: 250px;
+  animation: crawl 8s;
+}
+
+
+:root {
+  --main: #ffb13a;
+  --font: 'Roboto', 'Oxygen', sans-serif;
+}
+
+html {
+  font-size: 10px;
+}
+
+.star {
+  overflow: hidden;
+  background-color: black;
+  background-image: url(http://untroubled.org/backgrounds/space/stars.gif);
+  font-family: var(--font);
+  margin: 0;
+  color: white;
+}
+
+h2.star {
+  text-align: center;
+  margin: 0 0 60px 0;
+  font-size: 5rem;
+}
+
+p.star {
+  font-size: 3rem;
+  line-height: 6rem;
+  margin-bottom: 20px;
+}
+
+.star-wars {
+  padding: 40px;
+  text-align: justify;
+  margin: 0 auto;
+  letter-spacing: 1.5px;
+  max-width: 1080px;
+  height: 800px;
+  transform: perspective(200px) rotateX(14deg);
+  animation: intro 35s linear infinite;
+}
+
+.star-wars :is(h2, p) {
+  color: var(--main);
+}
+
+@keyframes intro {
+  0% {
+    transform: perspective(200px) rotateX(14deg) translateY(800px);
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    transform: perspective(200px) rotateX(20deg) translateY(-1000px);
+    opacity: 1;
+  }
+}
+
 html {
   cursor: url('Imagens/R.png'), auto;
+}
+
+.auto{
+  margin: auto;
 }
 
 .parteIndex {
