--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -13,17 +13,24 @@ body {
 
 }
 
+@media screen and (max-width: 1024px) {
+  .efeito-magica{
+    height: 600vh;
+  }
+}
+
 .efeito-magica {
   width: 250vh;
   height: 500vh;
   position: absolute;
   top: 0;
   background-color: #000000;
+  background-image:url(http://untroubled.org/backgrounds/space/stars.gif) ;
   animation: animation 8s;
   max-width: 100% ;
 }
 
-@keyframes animation {
+/*@keyframes animation {
   from {
     right: -150%;
   }
@@ -31,7 +38,7 @@ body {
   to {
     right: 0;
   }
-}
+}*/
 
 :root {
   --main: #ffb13a;
@@ -40,8 +47,7 @@ body {
 
 .star {
   overflow: hidden;
-  background-color: black;
-  background-image: url(http://untroubled.org/backgrounds/space/stars.gif);
+  background-color: none;
   font-family: var(--font);
   margin: 0;
   color: white;
@@ -54,8 +60,8 @@ h2.star {
 }
 
 p.star {
-  font-size: 40px;
-  line-height: 6rem;
+  font-size: 35px;
+  line-height: 4rem;
   margin-bottom: 20px;
 }
 
@@ -63,11 +69,11 @@ p.star {
   padding: 40px;
   text-align: justify;
   margin: 0 auto;
-  letter-spacing: 1.5px;
+  letter-spacing: 1px;
   max-width: 1080px;
-  height: 800px;
+  height: 750px;
   transform: perspective(200px) rotateX(14deg);
-  animation: intro 35s linear infinite;
+  animation: intro 40s linear infinite;
 }
 
 .star-wars :is(h2, p) {
@@ -110,24 +116,6 @@ html {
   font-size: 20px;
   color: #FFFFFF;
   text-shadow: 0 0 4px white;
-}
-
-.teste {
-  width: 300px;
-  height: 300px;
-  background-color: green;
-  border: 3px solid black;
-  border-radius: 10px;
-  margin-left: 20px;
-}
-
-.teste:hover {
-  width: 300px;
-  height: 300px;
-  background-color: rgb(0, 0, 0);
-  border: 3px solid rgb(255, 0, 0);
-  border-radius: 10px;
-
 }
 
 img {
@@ -244,7 +232,6 @@ p.margemC {
 
 .btn1 {
   margin-left: 4.8px;
-  /*display: flex;*/
   justify-content: center;
   align-items: center;
   width: 180px;
@@ -441,6 +428,7 @@ p.textos2 {
   width: 100%;
   display: grid;
   margin-left: 1cm;
+  overflow: hidden;
 }
 
 strong.cabeca1 {
@@ -672,8 +660,6 @@ a {
   }
 }
 
-
-
 @media screen and (max-width: 1024px) {
   .caixas {
     display: grid;
@@ -837,7 +823,6 @@ img.FelixCatus {
   }
 }
 
-/*Caso a gente queira fazer a barra voltar de novo*/
 @keyframes barraDois {
   from {
     bottom: 100%
@@ -847,7 +832,6 @@ img.FelixCatus {
     top: -100%
   }
 }
-
 
 .sidebar a {
   padding: 8px 8px 8px 32px;
@@ -912,7 +896,6 @@ h1.center {
 
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidebar {
     padding-top: 15px;
@@ -922,7 +905,6 @@ h1.center {
     font-size: 18px;
   }
 }
-
 
 @media (max-width: 1024px) {
   #openNav {
