--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -19,6 +19,10 @@ body {
   }
 }
 
+#magica {
+  display: none;
+}
+
 .efeito-magica {
   width: 250vh;
   height: 500vh;
@@ -360,6 +364,7 @@ html::-webkit-scrollbar {
   border-radius: 10px;
   box-shadow: 2px 2px 0px 0px white;
   font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 .gato {
@@ -417,7 +422,7 @@ p.textos {
 
 }
 
-p.textos2 {
+p#textos2 {
   z-index: 2;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
@@ -947,4 +952,4 @@ h1.center {
 
 .alight {
   text-align: center;
-}
+};
