--- a/ProjetoIntegrador.css
+++ b/ProjetoIntegrador.css
@@ -7,9 +7,9 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
-  background-image:url(http://untroubled.org/backgrounds/space/stars.gif) ;
+  background-image: url(http://untroubled.org/backgrounds/space/stars.gif);
   background-size: auto;
-  
+
 }
 
 #magica {
@@ -22,9 +22,9 @@ body {
   position: absolute;
   top: 0;
   background-color: #000000;
-  background-image:url(http://untroubled.org/backgrounds/space/stars.gif) ;
+  background-image: url(http://untroubled.org/backgrounds/space/stars.gif);
   animation: animation 8s;
-  max-width: 100% ;
+  max-width: 100%;
 }
 
 :root {
@@ -71,7 +71,7 @@ html {
   cursor: url('Imagens/R.png'), auto;
 }
 
-.auto{
+.auto {
   margin: auto;
 }
 
@@ -92,7 +92,7 @@ html {
 }
 
 img {
-  border-radius: 10px;
+
   border: 2pt solid rgb(50, 50, 121);
   text-align: center;
 
@@ -100,6 +100,7 @@ img {
 
 #center {
   text-align: center;
+  margin: auto;
 }
 
 #justify {
@@ -137,6 +138,8 @@ img {
   border-bottom: 2px solid #000000;
   box-shadow: 3px 3px 3px 3px #333;
   text-align: justify;
+  font-size: 12pt;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .conteudo2 {
@@ -160,13 +163,19 @@ img {
 blockquote {
   margin-left: 17cm;
   max-width: 230px;
-  font-size: 12px;
+  font-size: 10pt;
+}
+
+.conteudo > h1 {
+  font-size: 12pt;
 }
 
 p.margem {
   margin-left: 3cm;
+  font-size: 12pt;
   margin-right: 2cm;
   text-indent: 2cm;
+  line-height: 1.5;
 }
 
 p.margemC {
@@ -310,7 +319,7 @@ html::-webkit-scrollbar {
   height: 30%;
   border-radius: 10px;
   font-family: Arial, Helvetica, sans-serif;
-} 
+}
 
 .texto2 {
   display: flex;
@@ -348,7 +357,7 @@ img.veio {
   border: none;
   margin-left: 0.5cm;
   filter: invert(100%);
-  padding-right: 0.4% ;
+  padding-right: 0.4%;
 }
 
 
@@ -387,6 +396,18 @@ strong.cabeca1 {
   text-shadow: 0 0 4px white;
   text-decoration: none;
   width: 100%;
+}
+
+strong.cabeca12 {
+  z-index: 2;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  letter-spacing: 1px;
+  color: #FFFFFF;
+  text-shadow: 0 0 2px white;
+  text-decoration: none;
+  width: 100%;
+  line-height: 1.5;
 }
 
 
@@ -699,7 +720,7 @@ h1.center {
   border-radius: 10px;
 }
 
-p.margemsambaqui{
+p.margemsambaqui {
   font-size: 20px;
   letter-spacing: 1px;
   color: black;
@@ -708,4 +729,21 @@ p.margemsambaqui{
 
 .img-container {
   text-align: center
+}
+
+.texto-rodape {
+  padding-top: 4px;
+  text-align: center;
+  max-width: 950px;
+}
+
+.parte-rodape-esquerdo {
+  float: left;
+  text-align: justify;
+  margin-left: 40%;
+}
+
+.parte-rodape-direito {
+  float: right;
+  margin-right: -20%;
 }
